# includize

./: .clang-format  AUTHORS  LICENSE  Makefile.am  README.md  bootstrap.sh  cleanup.sh  configure.ac
.circleci/: config.yml
include/: Makefile.am
include/includize/: includize.hpp  null_stream_preparer.hpp  preprocessor.hpp  streambuf.hpp  toml.hpp  universal.hpp
include/includize/multibyte/: wstream_preparer.hpp  wtoml.hpp  wuniversal.hpp
tests/: Makefile.am  base.toml  base.txt  included.toml  included.txt  includize.cpp  orig.toml  orig.txt  test.cpp  wbase.toml  wbase.txt  wincluded.txt  wincluded01.toml
tests/include/: wincluded02.toml
tools/: format-code
