#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT(includize, 0.0.3, dcdillon@gmail.com)
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AX_CXX_COMPILE_STDCXX(11, ext, mandatory)

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 include/Makefile
                 tests/Makefile])

AC_OUTPUT
